--- a/src/app/pages/events/components/card/event-card.component.html
+++ b/src/app/pages/events/components/card/event-card.component.html
@@ -1,16 +1,16 @@
 <div class="event-card">
   <div class="event-card-header">
     <span class="header-logo">
-      <img src="/assets/images/card-dso-logo.png" alt="">
+      <img src="./assets/images/card-dso-logo.png" alt="">
     </span>
     <span class="sponsored-by">Online Talks</span>
   </div>
   <div class="event-card-level">
     <span class="level-text">Virtual Event</span>
-    <span class="event-level"><img src="/assets/images/level-1.png" alt="">Beginner</span>
+    <span class="event-level"><img src="./assets/images/level-1.png" alt="">Beginner</span>
   </div>
   <div class="card-thumbnail">
-    <img src="/assets/images/card-thumbnail-2.png" alt="">
+    <img src="./assets/images/card-thumbnail-2.png" alt="">
   </div>
   <div class="card-content">
     <h3>Key Questions to Ask When Considering an Associateship</h3>
