--- a/src/app/pages/events/components/slide/event-slide.component.html
+++ b/src/app/pages/events/components/slide/event-slide.component.html
@@ -1,5 +1,5 @@
 <div class="slide-content-wrap">
-  <img class="img-fluid" src="/assets/images/event-banner-slide1.png" alt="">
+  <img class="img-fluid" src="./assets/images/event-banner-slide1.png" alt="">
   <div class="slider-overlay">
     <div class="slide-content text-center">
       <h2>{{content.title}}</h2>
