--- a/src/app/pages/events/components/slide/event-slide.component.scss
+++ b/src/app/pages/events/components/slide/event-slide.component.scss
@@ -10,7 +10,7 @@
       top: 0;
       height: 100%;
       width: 100%;
-      background: url("/assets/images/slider-overlay.png") no-repeat center 50px / cover;
+      background: url("../../../../../assets/images/slider-overlay.png") no-repeat center 50px / cover;
     }
 
     .slide-content {
