--- a/src/app/pages/home/components/featured-topics/featured-topics.component.html
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.html
@@ -12,9 +12,9 @@
             <dsod-rating></dsod-rating>
           </div>
           <div class="feautred-block-thumbnail">
-            <img src="/assets/images/king-chess.png" class="img-fluid" alt="Feautred Thumbnail Large">
+            <img src="./assets/images/king-chess.png" class="img-fluid" alt="Feautred Thumbnail Large">
             <a href="" class="read-about">
-              <img src="/assets/images/file-icon.png" alt="">
+              <img src="./assets/images/file-icon.png" alt="">
             </a>
           </div>
           <div class="feautred-block-content">
