--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -9,9 +9,9 @@
             <dsod-rating></dsod-rating>
           </div>
           <div class="latest-block-thumbnail">
-            <img src="/assets/images/teeth.png" class="img-fluid" alt="Feautred Thumbnail Large">
+            <img src="./assets/images/teeth.png" class="img-fluid" alt="Feautred Thumbnail Large">
             <a href="" class="read-about">
-              <img src="/assets/images/file-icon.png" alt="">
+              <img src="./assets/images/file-icon.png" alt="">
             </a>
           </div>
           <div class="latest-block-caption">
