--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xl-3 align-self-center">
         <div class="ftr-logo text-lg-center">
-          <a [routerLink]="['/']"><img class="img-fluid" src="/assets/images/ftr-logo.png" alt=""></a>
+          <a [routerLink]="['/']"><img class="img-fluid" src="./assets/images/ftr-logo.png" alt=""></a>
           <p>Your career. Your life. Your way.</p>
         </div>
       </div>
