--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
     <div class="form-container">
       <form [formGroup]="signUpForm">
         <button class="btn btn-default btn-linkedin" type="button" (click)="loginWithLinkedIn()">
-          <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
+          <img class="social-image" src="./assets/images/icons/icon-linkedin.png">
           <span class="title">Join using LinkedIn</span>
         </button>
         <p class="text-or">or</p>
