--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
@@ -3,7 +3,7 @@
     <h4>Orthodontics</h4>
   </div>
   <div class="podcast-block-thumbnail">
-    <img src="/assets/images/orthodontics-avi.png" class="img-fluid" alt="Feautred Thumbnail Large">
+    <img src="./assets/images/orthodontics-avi.png" class="img-fluid" alt="Feautred Thumbnail Large">
     <div class="podcasts-block-caption">
       <h4>Treatment of Type III Sockets</h4>
     </div>
