--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -73,9 +73,8 @@
   }
 }
 
-
 .subscribe-today {
-  background: url("/assets/images/join-us.png") no-repeat center center / cover;
+  background: url("../../../../assets/images/join-us.png") no-repeat center center / cover;
   min-height: 1027px;
   border: 3px solid $light_grey;
   margin-top: 20px;
@@ -137,7 +136,7 @@
   padding-top: 20px;
 
   .join-ad-inner {
-    background: url("/assets/images/join-bg.png") no-repeat center center / cover;
+    background: url("../../../../assets/images/join-bg.png") no-repeat center center / cover;
     height: 1006px;
     position: relative;
     border: 3px solid $light_grey;
