--- a/src/app/pages/home/components/latest/latest.component.scss
+++ b/src/app/pages/home/components/latest/latest.component.scss
@@ -26,6 +26,10 @@
         width: 100%;
       }
 
+      >Video {
+        width: 100%;
+      }
+
       a.read-about {
         position: absolute;
         display: inline-block;
