--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
@@ -4,8 +4,8 @@
   padding: 13px 0;
 
   .our-sponsors-header {
-    padding: 21px 0 9px;
-    border-bottom: 1px solid $regent-gray;
+    padding: 11px 0px 0px 16px;
+    border-bottom: 1px solid #8799A7;
 
     h4 {
       display: flex;
