--- a/src/app/pages/home/components/featured-topics/featured-topics.component.scss
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.scss
@@ -7,6 +7,7 @@
   .feautred-block {
     margin: 15px 0;
     background: #f8f8f8;
+    height: 100%;
 
     .feautred-block-header {
       display: flex;
