--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -2,14 +2,16 @@
   <div class="row">
     <div class="col-md-5">
       <div class="latest-block-thumbnail">
-        <img src={{imageUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
+        <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{latestTopic.featuredMediaId}}"
+          class="img-fluid" alt="Feautred Thumbnail Large">
         <a href="" class="read-about">
           <img src="assets/images/article-icon.png" alt="">
         </a>
       </div>
     </div>
     <div class="col-md-7">
-      <dsod-topic [topic]="pageContent" [contentLenght]=200 [showImage]="false">
+      <dsod-topic [topic]="latestTopic" [contentLenght]=200 [showImage]="false" [imageSmall]="true" [showHeader]="true"
+        styleFor="latest">
       </dsod-topic>
     </div>
   </div>
