--- a/src/app/pages/home/components/latest-item/latest-item.component.scss
+++ b/src/app/pages/home/components/latest-item/latest-item.component.scss
@@ -20,9 +20,12 @@
   .latest-block-thumbnail {
     position: relative;
     border-top: 3px solid $mine_grey;
+    height: 100%;
 
     >img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     a.read-about {
