--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -1,21 +1,23 @@
-<section class="the-latest" *ngIf="(latestTopics$ | async)">
+<section class="the-latest">
   <h2 class="section-title">The Latest</h2>
-  <div class="latest-block">
+  <a class="latest-block" *ngIf="latestTopics.length" [routerLink]="['./video']">
     <div class="latest-block-header">
-      <h4>Implant Dentistry</h4>
+      <h4>{{latestTopics[0].categoryName}}</h4>
       <dsod-rating></dsod-rating>
     </div>
     <div class="latest-block-thumbnail">
-      <img src="assets/images/teeth.png" class="img-fluid" alt="Feautred Thumbnail Large">
+      <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{latestTopics[0].featuredMediaId}}"
+        class="img-fluid" alt="Feautred Thumbnail Large">
       <a href="" class="read-about">
-        <img src="assets/images/article-icon.png" alt="">
+        <img *ngIf="latestTopics[0].contentTypeName=='Articles'" src="assets/images/article-icon.png" alt="">
+        <img *ngIf="latestTopics[0].contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
       </a>
     </div>
     <div class="latest-block-caption">
-      <h4>Socket Repair Technique for Type II Sockets | By Asmita Bhekare, DDS</h4>
+      <h4>{{latestTopics[0].title}}</h4>
     </div>
-  </div>
-  <div *ngFor="let topic of (latestTopics$ | async)">
-    <dsod-latest-item [pageContent]="topic"></dsod-latest-item>
+  </a>
+  <div *ngFor="let topic of latestTopics | slice:1:6">
+    <dsod-latest-item [latestTopic]="topic"></dsod-latest-item>
   </div>
 </section>
