--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -1,6 +1,6 @@
 <h2 class="section-title">From Our Sponsors </h2>
 <div class="row">
-  <div class="row" *ngFor="let topic of (sponsoredTopics$ | async | contentFilter)">
+  <div class="row" *ngFor="let topic of sponsoredTopics | contentFilter">
     <div class="col-lg-6">
       <div class="our-sponsors">
         <div class="our-sponsors-header">
@@ -9,7 +9,8 @@
             Sponsored content from Align Technology, Inc.
           </h4>
         </div>
-        <dsod-topic [topic]="topic" [contentLenght]=280 [showImage]="false"></dsod-topic>
+        <dsod-topic [topic]="topic" [contentLenght]=280 [showImage]="false" [imageSmall]="true" [showHeader]="false"
+          styleFor="sponsored"></dsod-topic>
       </div>
     </div>
     <div class="col-lg-6">
