--- a/src/app/pages/home/components/trending/trending.component.html
+++ b/src/app/pages/home/components/trending/trending.component.html
@@ -1,9 +1,9 @@
 <div>
   <section class="trending-videos">
     <h2 class="section-title">Trending Videos</h2>
-    <div *ngFor="let topic of (trendingTopics$ | async) | slice : 0:4">
+    <div *ngFor="let topic of trendingTopics | slice : 0:4">
       <dsod-trending-item [trendingItem]="topic"></dsod-trending-item>
     </div>
-    <dsod-sponsored-ad></dsod-sponsored-ad>
+    <dsod-sponsored-ad *ngIf="trendingTopics.length"></dsod-sponsored-ad>
   </section>
 </div>
