--- a/src/app/pages/video/components/video-player/video-player.component.html
+++ b/src/app/pages/video/components/video-player/video-player.component.html
@@ -1,5 +1,6 @@
 <div class="video-thumbnail">
-  <video #video src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls="false" poster="assets/images/video-thumb-lg.png">
+  <video #video src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId=5bd72cb8264c804944e436ef"
+    controls="false" poster="assets/images/video-thumb-lg.png">
 
   </video>
   <div class="video-controls">
