--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<dsod-carousel [loggedIn]="loggedIn | async"></dsod-carousel>
+<dsod-carousel [loggedIn]="isLoggedIn$ | async"></dsod-carousel>
 <dsod-home-ad-banner></dsod-home-ad-banner>
 <dsod-featured-topics></dsod-featured-topics>
 <dsod-latest></dsod-latest>
