--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -13,6 +13,10 @@
     height: 150px;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.95), rgba(255, 255, 255, 0));
   }
+  input:focus {
+    outline: none;
+    box-shadow: none;
+  }
   .content-container {
     position: absolute;
     top: 50%;
