--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -122,24 +122,14 @@
         line-height: 30px;
       }
 
-      .p-featured-left {
+      .p-large {
         font-size: 22px;
         line-height: 36px;
       }
 
-      .p-featured-right {
+      .p-small {
         font-size: 17px;
         line-height: 25px;
-      }
-
-      .p-latest {
-        font-size: 22px;
-        line-height: 36px;
-      }
-
-      .p-sponsored {
-        font-size: 22px;
-        line-height: 36px;
       }
     }
   }
