added endpoints for podcast, articles and videos pages

--- a/src/app/pages/article/components/article-content/article-content.component.html
+++ b/src/app/pages/article/components/article-content/article-content.component.html
@@ -1,5 +1,6 @@
-<div class="article-content">
-  <p class="sub-head">
+<div class="article-content" *ngIf="content">
+  <p class="sub-head">{{content.content}}</p>
+  <!-- <p class="sub-head">
     What if there were a simple, fun, and powerful trick you could use in your DSO-supported practice that
     would improve financial results, staff satisfaction, and patient retention, all without costing a penny?
     That simple
@@ -7,8 +8,8 @@
     ensure that the team receives consistent bonuses by adding more revenue through creating opportunities or
     <a href="#">preventing
       missed ones</a>.
-  </p>
-  <p>From an operational standpoint, the morning huddle is a check-in to review who is there, who is out sick,
+  </p> -->
+  <!-- <p>From an operational standpoint, the morning huddle is a check-in to review who is there, who is out sick,
     what patients are coming in, and what challenges may be identified in the schedule. Holes in the schedule
     are
     identified so that your team then has a chance to fill them. Typically, it provides an opportunity to
@@ -52,5 +53,5 @@
       your staff know how important they are as pivotal members of the team. </li>
   </ul>
   <p>Once you begin having a morning huddle, even with its inherent obstacles, you’ll wonder how your office
-    ever got through the day without one! </p>
+    ever got through the day without one! </p> -->
 </div>
