--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="col-md-7">
-      <dsod-topic [topic]="latestTopic" [contentLenght]=200 [showImage]="false" [imageSmall]="true" [showHeader]="true">
+      <dsod-topic [topic]="latestTopic" [contentLenght]=200 [showImage]="false" [showHeader]="true">
       </dsod-topic>
     </div>
   </div>
