--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -9,7 +9,7 @@
             Sponsored content from Align Technology, Inc.
           </h4>
         </div>
-        <dsod-topic [topic]="topic" [contentLenght]=280 [showImage]="false" [imageSmall]="true" [showHeader]="false"></dsod-topic>
+        <dsod-topic [topic]="topic" [contentLenght]=280 [showImage]="false" styleFor="sponsored" [showHeader]="false"></dsod-topic>
       </div>
     </div>
     <div class="col-lg-6">
