--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 
-.podcast-content {
+.podcast-intro {
   .top-head {
     padding-top: 77px;
     border-bottom: 2px solid #c0cad1;
