--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -50,6 +50,10 @@
         width: 100%;
       }
 
+      >video {
+        width: 100%
+      }
+
       a.read-about {
         position: absolute;
         display: inline-block;
