--- a/src/app/pages/video/components/video-player/video-player.component.html
+++ b/src/app/pages/video/components/video-player/video-player.component.html
@@ -1,6 +1,6 @@
-<div class="video-thumbnail">
-  <video #video src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId=5bd72cb8264c804944e436ef"
-    controls="false" poster="assets/images/video-thumb-lg.png">
+<div class="video-thumbnail" *ngIf="content">
+  <video #video src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{content.videos[0]}}"
+    controls="false" poster="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{content.featureMediaId}}">
 
   </video>
   <div class="video-controls">
