--- a/src/app/shared/components/audio-player/audio-player.component.html
+++ b/src/app/shared/components/audio-player/audio-player.component.html
@@ -1,4 +1,4 @@
-<div class="podcast-player">
+<div class="podcast-player" *ngIf="content">
   <div class="visualizer">
     <div class="row">
       <div class="col-md-8">
