--- a/src/app/shared/components/topic/topic.component.html
+++ b/src/app/shared/components/topic/topic.component.html
@@ -1,5 +1,5 @@
 <div class="block-wrap">
-  <div class="feautred-block feautred-block-sm" [ngClass]="{'bg-none':styleFor=='sponsored','feautred-block-lg':styleFor=='featured-left'}">
+  <div class="feautred-block feautred-block-sm" [ngClass]="{'bg-none':styleFor=='sponsored','feautred-block-lg':styleFor=='content-large'}">
     <div class="feautred-block-header" *ngIf="showHeader">
       <h4>{{topic.categoryName}}</h4>
       <dsod-rating></dsod-rating>
@@ -7,24 +7,32 @@
     <div class="feautred-block-thumbnail" *ngIf="topic.featuredMediaId && showImage">
       <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{topic.featuredMediaId}}"
         class="img-fluid" alt="Feautred Thumbnail Large">
-      <a href="" class="read-about">
+      <a href="javascript:void(0)" class="read-about">
         <img *ngIf="topic.contentTypeName=='Articles'" src="assets/images/article-icon.png" alt="">
         <img *ngIf="topic.contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
+        <img *ngIf="topic.contentTypeName=='Podcasts'" src="assets/images/podcast-icon.png" alt="">
       </a>
     </div>
     <div class="feautred-block-content">
-      <h2 class="topic-title-large mb-1" [ngClass]="{'topic-title-small':styleFor=='featured-right'}">{{topic.title}}</h2>
-      <em *ngIf="topic.content">{{(topic.content | slice:1:getIndex(topic.content)-1)}} <a href="" class="read-about">
+      <h2 class="topic-title-large mb-1" [ngClass]="{'topic-title-small':styleFor=='content-small'}">{{topic.title}}</h2>
+      <em *ngIf="topic.content">{{(topic.content | slice:1:getIndex(topic.content)-1)}}
+        <a href="javascrpipt:void(0)" class="read-about">
           <img *ngIf="topic.contentTypeName=='Articles'&& !topic.featuredMediaId" src="assets/images/article-icon.png"
             alt="">
           <img *ngIf="topic.contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
+          <img *ngIf="topic.contentTypeName=='Podcasts'" src="assets/images/podcast-icon.png" alt="">
         </a> </em>
-      <p *ngIf="topic.content; else more" class="mt-3 p-large" [ngClass]="{'p-small':styleFor=='featured-right'}">{{(topic.content
-        | slice:getIndex(topic.content):contentLenght)+'...'}}<a *ngIf="topic.contentTypeName=='Articles'" [routerLink]="['/article',topic.id]">[more]</a><a
-          *ngIf="topic.contentTypeName=='Videos'" [routerLink]="['/video',topic.id]">[more]</a></p>
+      <p *ngIf="topic.content; else more" class="mt-3 p-large" [ngClass]="{'p-small':styleFor=='content-small'}">{{(topic.content
+        | slice:getIndex(topic.content):contentLenght)+'...'}}
+        <a *ngIf="topic.contentTypeName=='Articles'" [routerLink]="['/article',topic.id]">[more]</a>
+        <a *ngIf="topic.contentTypeName=='Videos'" [routerLink]="['/video',topic.id]">[more]</a>
+        <a *ngIf="topic.contentTypeName=='Podcasts'" [routerLink]="['/podcast',topic.id]">[more]</a></p>
       <ng-template #more>
-        <p class="mt-3">...<a *ngIf="topic.contentTypeName=='Articles'" [routerLink]="['/article',topic.id]">[more]</a><a
-            *ngIf="topic.contentTypeName=='Videos'" [routerLink]="['/video',topic.id]">[more]</a></p>
+        <p class="mt-3">...
+          <a *ngIf="topic.contentTypeName=='Articles'" [routerLink]="['/article',topic.id]">[more]</a>
+          <a *ngIf="topic.contentTypeName=='Videos'" [routerLink]="['/video',topic.id]">[more]</a>
+          <a *ngIf="topic.contentTypeName=='Podcasts'" [routerLink]="['/podcast',topic.id]">[more]</a>
+        </p>
       </ng-template>
     </div>
   </div>
