- added layout states

--- a/src/app/layout/profile/profile-panel/profile-panel.component.html
+++ b/src/app/layout/profile/profile-panel/profile-panel.component.html
@@ -1,6 +1,6 @@
 <div class="profile-panel-container" *ngIf="isLoggedIn$ | async">
-  <div class="profile-container" [ngClass]="{'opened': profilePanel | async}">
-    <dsod-profile-view *ngIf="!isEditMode"></dsod-profile-view>
-    <dsod-profile-edit-view *ngIf="isEditMode"></dsod-profile-edit-view>
+  <div class="profile-container" [ngClass]="{'opened': profilePanel$ | async}">
+    <dsod-profile-view *ngIf="!(isEditMode$ | async)"></dsod-profile-view>
+    <dsod-profile-edit-view *ngIf="isEditMode$ | async"></dsod-profile-edit-view>
   </div>
 </div>
