--- a/src/app/layout/profile/profile-view/profile-view.component.scss
+++ b/src/app/layout/profile/profile-view/profile-view.component.scss
@@ -10,9 +10,25 @@
     font-size: 20px;
   }
   .profile-body {
+    .action-container {
+      display: flex;
+      align-items: flex-start;
+      position: absolute;
+      right: 0;
+      padding: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      .action-name {
+        padding: 0 10px;
+        line-height: 1.14;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
     .section-container {
       padding: 15px 30px;
-      border-bottom: 2px solid #929090;
+      border-bottom: 1px solid #929090;
       line-height: 1.2;
       &:last-child {
         border-bottom: none;
@@ -69,7 +85,7 @@
               margin-left: 20px;
               font-size: 15px;
               padding: 10px 0 15px;
-              border-bottom: 2px solid $gray;
+              border-bottom: 1px solid $gray;
               .title {
                 margin-bottom: 0;
                 font-size: 15px;
