--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,4 @@
 @import "../styles/base/fonts";
 @import "../styles/base/variables";
 @import "../styles/base/buttons";
+@import "../styles/base/profile";
